wp-content/themes/sixgill/css/custom_2016.css
/* ... */
.my_txtSolutions, .my_txtSolutions_noline {
	border-left:1px solid #9C9C9C;
	padding-left:30px;
	text-align:left;
	font-size:15px;
	color:#686868;
}

.my_txtSolutions_noline {border-left:0px;}


.my_iconSolution {width:135px;}
.my_boxSolution_title {
	font-family: "Lato", serif, sans-serif;
	font-size:27px;
	font-weight:bolder;
	text-transform:uppercase;
	color:#000;
	border:4px solid #000000;
	padding:10px 20px;
	text-align:center;
	margin-bottom:35px;
}

.my_txtSolution { border:0px solid #FF0004;}


.my_containerSolution {
	max-width:930px;
	padding-top:75px;
	margin-top:0px;
	margin-bottom:0px;
	padding-bottom:0px;
	border:0px solid #FE0004;
}

.footer_Learn, .footer_Links {
	text-align:left;
	border:0px solid #FE0004;
	color:#FFF;
	font-size:20px;
	margin-top:12px;
	font-weight:normal;
	padding:0px 20px;
}

.footer_Links {text-decoration:none; font-size: 14px;	color:#FFF;}
.footer_Links a {
	margin: 0 10px;
	color: #FFF;
	border-bottom: 0px;
}
.footer_Links a:hover {	color: #CCC;}


.footer_Schedule, .footer_Copy {
	text-align:right;
	border:0px solid #FE0004;
	color:#FFF;
	font-size:20px;
	margin-top:12px;
	font-weight:normal;
	padding:0px 20px;
}
.footer_Copy {font-size: 14px;	color:#FFF;}

.my_headerBoxSolution { margin-bottom: 30px; }

.hr-home-sub-title {
	max-width: 650px;
}

.hr-home-sup-title {
	margin-top:-0.8em;
	max-width: 650px;
}

.home-diagram {
	padding:85px 50px 45px 50px;
}

#products {
	background-image: url('/wp-content/themes/sixgill/images/td/home/00_BlueShape.jpg');
	background-size:cover;
	height:171px;
}

.applying-layer-copperOnVideo {
    background-color: rgba(0,0,0,0.45);
}

.press-date, .press-by-author, .press-title, .press-subtitle {
	font-family: "Lato", serif, sans-serif;
}

.no-bottom-margin {
	margin-bottom: 0px;
}

.press-title, .press-subtitle {
	color: white;
}

.press-by-author {
	color: #000000;
    font-size: 18px;
}

.press-title {
	margin-bottom: 0px;
}

.blog-post-preview-header {
	font-size: 16px;
}

.blog-post-title {
	font-size: 24px;
	font-weight: bold;
	color: #2e2e2e;
}

.blog-post-suptitle {
	font-weight: bold;
	margin-bottom: 0px;
	color: #000000;
    font-size: 18px;
	line-height: 1em !important;
}

.blog-container {
	padding-top: 0px;
	margin-left: 5%;
	margin-top: 40px;
	margin-right: 10%;
	max-width: none;
}

.widget_mc4wp_form_widget {
	margin-top: 10px;
}

.subscribe-block-tablet-mobile {
	background-color: #f0f0f0;
	width: 100%;
}

.subscribe-success-icon {
	background-image: url('/wp-content/themes/sixgill/images/td/blog/subscribe_success.svg');
	width: 100%;
	height: 64px;
	display: block;
	background-position: center center;
	background-repeat: no-repeat;
	display: block;
	margin-bottom: 20px;
	margin-top: 10px;
}

.subscribe-row {
	display: table;
	width: 100%;
	padding-top: 20px;
}

.subscribe-element {
	display: table-cell;
	vertical-align: middle;
}
.subscribe-input-container {
	width:100%;
}

.blog-list {
	padding-bottom: 0px;
	width: 100%;
	padding-right: 5px;
}

.global-social-buttons-separator {
	margin-top: 220px;
	margin-bottom: 16px;
}

.menu-social-link {
	padding-right: 13px !important;
	padding-left: 13px !important;
}

.menu-social-link:last-child {
	padding-right: 0px !important;
}

nav#primary-menu > ul {
	height: 5000px;
}

#menu-background {
	display: none;
	z-index: 9997;
	position: fixed;
	height: 100%;
	width: 100%;
	background: white;
	top: 0;
	left: 0;
}

.resources-background {
	background-color: #eeeeee;
}

.resource-block {
	height: 438px;
	display: inline-block;
	background-color: #ffffff;
}

.resource-title {
	font-size: 24px;
	font-weight: bold;
	text-align: center;
}

.resource-line {
	display: block;
	height: 1px;
	border: 0;
	border-top: 1px solid #e7e7e7;
	width: 100%;
	margin: 0px auto;
	margin-bottom: 12px;
}

.resources-blocks-container {
	text-align: left;
	max-width: 1520px;
	display: inline-block;
}

.resource-container {
	padding: 0px;
	margin: 0px auto;
	width: 100%;
	text-align: center;
    height: 110px;
    overflow: hidden;
}

.resource-image-container {
	overflow: hidden;
	background-position: center center !important;
	background-repeat: no-repeat !important;
	background-size: contain !important;
	background-position: center center;
}

.resource-title-container {
	display: table-cell;
	vertical-align: middle;
}

.full-block-width {
	width: 350px;
}

.resources-container {
	text-align: center;
}

.resource-link {
	color: #999999;
}

label {
	text-align: left;
}

.submit-resource-form-button {
	background: url(/wp-content/themes/sixgill/images/td/resources/download_now.png);
	border: 0px;
	height: 67px;
	width: 293px !important;
	max-width: 293px !important;
	font-size: 0px;
}

.yikes-easy-mc-success-message {
	display:none !important;
}

#home-main-text {
	max-width: 650px;
	text-align: left;
}

#home-button-on-video {
	margin: 30px 0px 0px 0px;
}

.max-width-720 {
	max-width:720px;
}

.company-learn-more-text {
	display: none;
}

.companyDescription p {
	margin-bottom: 0px !important;
}

#home-main-text {
	max-width: 650px;
}
/* ... */

